--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
 
     <dimen name="icon_size">24dp</dimen>
     <dimen name="player_icon">30dp</dimen>
+    <dimen name="edit_text_corner_radius">8dp</dimen>
 
     <dimen name="input_text_radius">10dp</dimen>
 
