--- a/app/src/main/res/layout/add_playlist_dialog.xml
+++ b/app/src/main/res/layout/add_playlist_dialog.xml
@@ -28,9 +28,12 @@
         <EditText
             android:id="@+id/name_text_field"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginTop="32dp"
-            android:backgroundTint="@color/white"
+            android:paddingHorizontal="8dp"
+            android:hint="Name"
+            android:textColorHint="@color/white_40"
+            android:background="@drawable/background_edit_text"
             android:textColor="@color/text_primary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +77,7 @@
             style="@style/custom_button_accept_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="Add"
             app:layout_constraintEnd_toEndOf="parent"
