--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -17,11 +15,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:padding="16dp"
-        android:src="@drawable/exo_ic_settings"
+        android:src="@drawable/ic_equalizer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/iconColor" />
-
 
     <ImageView
         android:id="@+id/back"
@@ -37,11 +34,9 @@
         app:tint="@color/iconColor" />
 
     <TextView
-
         android:id="@+id/from_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:fontFamily="@font/abhaya_libre_bold"
         android:text="From Tracks"
         android:textColor="@color/text_primary"
@@ -71,11 +66,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-
             android:scaleType="fitXY"
             android:src="@drawable/place_holder" />
     </com.google.android.material.card.MaterialCardView>
-
 
     <TextView
         android:id="@+id/title_name"
@@ -90,7 +83,6 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/artist_name"
         app:layout_constraintStart_toStartOf="@+id/materialCardView" />
-
 
     <TextView
         android:id="@+id/artist_name"
