--- a/app/src/main/res/layout/equalizer_ui.xml
+++ b/app/src/main/res/layout/equalizer_ui.xml
@@ -58,7 +58,7 @@
             android:layout_height="0dp"
             android:layout_weight="3"
             android:background="@drawable/graph_back_2"
-            android:backgroundTint="@color/primaryLight_60"
+            android:backgroundTint="@color/white_40"
             android:paddingBottom="5dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp" />
