--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,37 +20,28 @@
     <color name="grad_dark">#1f1c48</color>
     <color name="on_primary">#8F5AC7</color>
 
-    <color name="dark">#092634</color>
-    <color name="moderate">#344e5e</color>
-    <color name="light">@color/white</color>
 
-    <color name="background_color">@color/moderate</color>
-    <color name="blackShade">#37474f</color>
-    <color name="primary_dark">#102027</color>
+
+
     <color name="primary">#37474f</color>
-    <color name="primary_light">#6B7C85</color>
-    <color name="primaryLight_60">#806B7C85</color>
+
 
 
     <color name="text_primary">@color/white</color>
     <color name="text_light">@color/white_40</color>
 
 
-    <color name="icon_unselected">@color/black_60</color>
-    <color name="icon_selected">@color/primary</color>
 
-    <color name="iconColor">@color/light</color>
-    <color name="icon_inactive">#858585</color>
+    <color name="iconColor">@color/white</color>
+    <color name="icon_inactive">#928EB6</color>
 
-<!--    Main activity-->
-    <color name="bottom_nav_background">#E8E7E7</color>
+
 
 <!--    player activity-->
     <color name="iconColor_outer">@color/grad_dark</color>
     <color name="iconColor_inner">#FDFEFF</color>
     <color name="unplayed_color">#40FFFFFF</color>
-    <color name="played_color">@color/light</color>
-
+    <color name="played_color">@color/white</color>
     <color name="checkbox_color">@color/iconColor</color>
 
 </resources>
